-----------------------------------------------------------------------------

 >>> NOTICE!!! <<<

 This file contains SPOILERS, which might ruin your IVAN experience
 totally. The file is provided AS IS and is probably completely unreadable.

-----------------------------------------------------------------------------
August 15 2006 Heikki Sairanen <heikki.sairanen@gmail.com>

  * coffin (looks are bad) added to catacomb
	
August 15 2006 Heikki Sairanen <heikki.sairanen@gmail.com>

  * Added can materials (now works)
  * Added stairs to catacomb

August 15 2006 Heikki Sairanen <heikki.sairanen@gmail.com>

  * Added can materials
	
July 16 2006 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Added a smiley to the "Unfortunately you died." screen

July 25 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Fixed an animation bug which occured over memorized stairs outside LOS
  * Fixed a bug in the displacement code

July 24 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Sadism and masochism work quite well
  * Fixed a fatal bug in the head shot code

July 24 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Humanoid.pcx modified, ready for Kahvi's addition of broken armor pics
  * Sadism yet incomplete -> bugs

July 24 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Fixed a bug in the death msg code

July 23 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Added new abstraction for locked items
  * Attnam's cellar is now smaller
  * Attnam's cellar has lamps

July 23 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Added Kahvi's map of Attnam's cellar partially

July 23 2005 Heikki Sairanen <heikki.sairanen@gmail.com>

  * punisher added	

July 23 2005 Heikki Sairanen <heikki.sairanen@gmail.com>

  * coffin added	

July 23 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Added some undeground levels to Attnam

July 22 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>
