@@ -40,7 +40,7 @@ class femath
  public:
   static long Rand();
   static void SetSeed(ulong);
-  static long RandN(long N) { return Rand() % N; }
+  static long RandN(long N) { return long(double(N) * Rand() / 0x80000000); }
   static long RandGood(long N)
   { return long(double(N) * Rand() / 0x80000000); }
   static int WeightedRand(long*, long);
